@@ -7,6 +7,7 @@
 	* lib/rubygems/commands/environment_command.rb:  Describe environment
 	variables and gemrc in `gem help env`.
 	* lib/rubygems.rb:  Warn when executing Gem::manage_gems.
+	* lib/rubygems/doc_manager.rb:  Have RubyGems update the ri cache.
 
 2008-08-22  Luis Lavena  <luislavena@gmail.com>
 
